# pyearthmesh

./: MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yml
data/: run_dggal.sh
docs/: config_manager_architecture.md
examples/: config_example.py  create_coastline_buffer_file.py
examples/healpix/: example_clip_healpix.py  example_clip_healpix_vectorized.py  example_clip_rhealpix.py  example_convert_healpix_to_domain_file.py  example_create_healpix.py  example_create_rhealpix.py  example_inject_dem.py  example_inject_lucc.py  example_merge_healpix.py  example_merge_land_cells.py
examples/isea/: convert_format.py  example_clip_isea3h.py  example_clip_isea3h_dggrid.py  example_create_isea3h.py  example_create_isea3h_dggrid.py
examples/mpas/: mpas_example.py
examples/rhealpix/: example_create_rhealpix.py
examples/zarr/: example_convert_to_zarr.py
plans/: buffer_simplification_plan.md  zarr_implementation_code_scaffolds.md  zarr_implementation_plan.md
pyearthmesh/: __init__.py
pyearthmesh/classes/: __init__.py  config.py  dggrid.py  edge.py  hexagon.py  latlon.py  link.py  meshcase.py  meshcell.py  mpas.py  square.py  tin.py  vertex.py
pyearthmesh/config/: config_manager.py
pyearthmesh/meshes/: __init__.py
pyearthmesh/meshes/structured/: __init__.py
pyearthmesh/meshes/structured/cubicsphere/: __init__.py  create_cubicsphere_mesh.py
pyearthmesh/meshes/structured/dggs/: __init__.py  check_mesh_quality_multi_tile.py  convert_vector_format_multi_tile.py
pyearthmesh/meshes/structured/hexaon/: create_hexagon_mesh.py
pyearthmesh/meshes/structured/latlon/: create_latlon_mesh.py
pyearthmesh/meshes/structured/square/: create_square_mesh.py
pyearthmesh/meshes/structured/triangular/: __init__.py  create_triangular_mesh.py
pyearthmesh/meshes/unstructured/: __init__.py
pyearthmesh/meshes/unstructured/jigsaw/: __init__.py  inpoly2.py  jigsawcls.py  loadgeo2.py  run_jigsaw.py  saveesm.py  savetin.py  utility.py
pyearthmesh/meshes/unstructured/mpas/: __init__.py  (+2 more)
pyearthmesh/utility/: change_json_key_value.py  convert_attributes.py  convert_coordinates.py  convert_mesh_formats.py  convert_vector_to_domain_file.py  create_coastline_buffer.py  extract_land_meshcells.py  extract_land_meshcells_vectorized.py  find_minimal_enclosing_polygon.py  healpix_zone.py  mesh_utility.py  zarr_config.py  zarr_io.py
pyearthmesh/utility/jigsaw/: inpoly2.py  loadgeo.py  run_jigsaw.py  utility.py
pyearthmesh/utility/mpas_tools/: __init__.py  compose.py  mpasmsh.py  spacing.py
pyearthmesh/utility/potentiometric/: __init__.py  calculate_potentiometric.py
(+9 files in other folders)
